--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,155 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.btn {
+    color: aliceblue;
+}
+
+.carousel {
+    width: 80%;
+    /* Adjust as needed */
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel-inner {
+    display: flex;
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-inner img {
+    width: 100%;
+    /* Ensures each image takes up the full width of the carousel */
+    /* flex-shrink: 0; */
+}
+
+.about-us {
+    width: 100%;
+    background-color: white;
+    padding: 20px;
+    height: 300px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+}
+
+.header-img{
+    width: 100%;
+    height: 20%;
+}
+
+.header-overlay {
+    position: absolute;
+    top: 60%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+}
+
+.header-title {
+    color: aliceblue;
+    font-size: 88px;
+    font-weight: bold;
+    text-align: left;
+    font-family:sans-serif;
+}
+
+.header-subtitle {
+    color: aliceblue;
+    font-size: 18px;
+    font-weight:400;
+    text-align: left;
+    font-family:sans-serif;
+}
+
+.about-us-header {
+    flex: 1;
+    margin-left: 7%;
+    margin-top: 6%;
+}
+
+.about-us-title{
+    color: rgb(2, 49, 47);
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    font-family:sans-serif;
+}
+
+.about-us-subtitle{
+    color: rgb(2, 49, 47);
+    font-size: 48px;
+    font-weight: 600;
+    text-align: left;
+    font-family:sans-serif;
+}
+
+.about-us-body{
+    flex: 2;
+    margin-top: 7%;
+    margin-bottom: 4%;
+}
+
+.about-us-description1 {
+    color: rgb(2, 49, 47);
+    font-size: 30px;
+    font-weight: 500;
+    margin-left: 60px;
+    text-align: left;
+    font-family: sans-serif;
+}
+
+.about-us-description2{
+    color: rgb(2, 49, 47);
+    font-size: 30px;
+    font-weight: 500;
+    text-align: left;
+    font-family:sans-serif;
+}
+
+.carousel-image {
+    width: 200px; height: 500px
+}
+
+.home-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    padding: 20px;
+    background-color: white;
+}
+
+.home-info-card{
+    width: 13%;
+    margin-top: 7%;
+    margin-bottom: 3%;
+}
+
+.home-info-card-number{
+    color: rgb(0, 70, 67);
+    font-size: 58px;
+    font-weight: 700;
+    text-align: left;
+    font-family:sans-serif;
+    margin-bottom: 20px;
+}
+.home-info-card-title{
+    color: rgb(2, 49, 47);
+    font-size: 20px;
+    font-weight: 600;
+    text-align: left;
+    font-family:sans-serif;
+    margin-bottom: 10px;
+}
+.home-info-card-subtitle {
+    color: '#666';
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    font-family:sans-serif;
+}
