--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,7 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-#carousel-section {
-    height: 500px;
-    /* Adjust as needed */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f0f0f0;
-    /* Background color for the section */
+  margin: 0;
+  font-family: Arial, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
