--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,3 +153,73 @@
     text-align: left;
     font-family:sans-serif;
 }
+
+.unlock-your-dream-container{
+    position: relative;
+    width: 100%;
+}
+
+.unlock-your-dream {
+    width: 100%;
+    height: auto;
+    object-position: center center;
+        object-fit: cover;
+        image-rendering: auto;
+        position: relative;
+}
+
+.unlock-your-dream-overlay{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    height: 100%;
+}
+
+.unlock-your-dream-title{
+    color: aliceblue;
+    font-size: 72px;
+    font-weight: 600;
+    text-align: left;
+    font-family:sans-serif;
+}
+
+.unlock-your-dream-subtitle {
+    color: aliceblue;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    font-family:sans-serif;
+    margin-bottom: 20px;
+}
+
+.primary-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    /* width: 150px; */
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: white;
+    border-radius: 34px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.primary-button-text {
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: left;
+    font-family:sans-serif;
+}
+
