--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,298 +2,541 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .btn {
-    color: aliceblue;
+  color: aliceblue;
 }
 
 .carousel {
-    width: 80%;
-    /* Adjust as needed */
-    overflow: hidden;
-    position: relative;
+  width: 80%;
+  /* Adjust as needed */
+  overflow: hidden;
+  position: relative;
 }
 
 .carousel-inner {
-    display: flex;
-    width: 100%;
-    transition: transform 0.5s ease-in-out;
+  display: flex;
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
 }
 
 .carousel-inner img {
-    width: 100%;
-    /* Ensures each image takes up the full width of the carousel */
-    /* flex-shrink: 0; */
+  width: 100%;
+  /* Ensures each image takes up the full width of the carousel */
+  /* flex-shrink: 0; */
 }
 
 .about-us {
-    width: 100%;
-    background-color: white;
-    padding: 20px;
-    height: 300px;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 
-.header-img{
-    width: 100%;
-    height: 20%;
+.header-img {
+  width: 100%;
+  height: auto;
 }
 
 .header-overlay {
-    position: absolute;
-    top: 60%;
-    left: 45%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 60%;
+  left: 45%;
+  transform: translate(-50%, -50%);
 }
 
 .header-title {
-    color: aliceblue;
-    font-size: 88px;
-    font-weight: bold;
-    text-align: left;
-    font-family:sans-serif;
+  color: aliceblue;
+  font-size: 88px;
+  font-weight: bold;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .header-subtitle {
-    color: aliceblue;
-    font-size: 18px;
-    font-weight:400;
-    text-align: left;
-    font-family:sans-serif;
+  color: aliceblue;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .about-us-header {
-    flex: 1;
-    margin-left: 7%;
-    margin-top: 6%;
+  flex: 1;
+  margin-left: 7%;
+  margin-top: 6%;
 }
 
-.about-us-title{
-    color: rgb(2, 49, 47);
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-    font-family:sans-serif;
+.about-us-title {
+  color: rgb(2, 49, 47);
+  font-size: 16px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
 }
 
-.about-us-subtitle{
-    color: rgb(2, 49, 47);
-    font-size: 48px;
-    font-weight: 600;
-    text-align: left;
-    font-family:sans-serif;
+.about-us-subtitle {
+  color: rgb(2, 49, 47);
+  font-size: 48px;
+  font-weight: 600;
+  text-align: left;
+  font-family: sans-serif;
 }
 
-.about-us-body{
-    flex: 2;
-    margin-top: 7%;
-    margin-bottom: 4%;
+.about-us-body {
+  flex: 2;
+  margin-top: 7%;
+  margin-bottom: 4%;
 }
 
 .about-us-description1 {
-    color: rgb(2, 49, 47);
-    font-size: 30px;
-    font-weight: 500;
-    margin-left: 60px;
-    text-align: left;
-    font-family: sans-serif;
+  color: rgb(2, 49, 47);
+  font-size: 30px;
+  font-weight: 500;
+  margin-left: 60px;
+  text-align: left;
+  font-family: sans-serif;
 }
 
-.about-us-description2{
-    color: rgb(2, 49, 47);
-    font-size: 30px;
-    font-weight: 500;
-    text-align: left;
-    font-family:sans-serif;
+.about-us-description2 {
+  color: rgb(2, 49, 47);
+  font-size: 30px;
+  font-weight: 500;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .carousel-image {
-    width: 200px; height: 500px
+  width: 200px;
+  height: 500px;
 }
 
 .home-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 auto;
-    width: 100%;
-    padding: 20px;
-    background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;
+  padding: 20px;
+  background-color: white;
 }
 
-.home-info-card{
-    width: 13%;
-    margin-top: 7%;
-    margin-bottom: 3%;
+.home-info-card {
+  width: 13%;
+  margin-top: 7%;
+  margin-bottom: 3%;
 }
 
-.home-info-card-number{
-    color: rgb(0, 70, 67);
-    font-size: 58px;
-    font-weight: 700;
-    text-align: left;
-    font-family:sans-serif;
-    margin-bottom: 20px;
+.home-info-card-number {
+  color: rgb(0, 70, 67);
+  font-size: 58px;
+  font-weight: 700;
+  text-align: left;
+  font-family: sans-serif;
+  margin-bottom: 20px;
 }
-.home-info-card-title{
-    color: rgb(2, 49, 47);
-    font-size: 20px;
-    font-weight: 600;
-    text-align: left;
-    font-family:sans-serif;
-    margin-bottom: 10px;
+.home-info-card-title {
+  color: rgb(2, 49, 47);
+  font-size: 20px;
+  font-weight: 500;
+  text-align: left;
+  font-family: sans-serif;
+  margin-bottom: 10px;
 }
 .home-info-card-subtitle {
-    color: '#666';
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-    font-family:sans-serif;
+  color: #999;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
 }
 
-.unlock-your-dream-container{
-    position: relative;
-    width: 100%;
+.unlock-your-dream-container {
+  position: relative;
+  width: 100%;
 }
 
 .unlock-your-dream {
-    width: 100%;
-    height: auto;
-    object-position: center center;
-        object-fit: cover;
-        image-rendering: auto;
-        position: relative;
+  width: 100%;
+  height: auto;
+  object-position: center center;
+  object-fit: cover;
+  image-rendering: auto;
+  position: relative;
 }
 
-.unlock-your-dream-overlay{
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 80%;
-    height: 100%;
+.unlock-your-dream-overlay {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  height: 100%;
 }
 
-.unlock-your-dream-title{
-    color: aliceblue;
-    font-size: 72px;
-    font-weight: 600;
-    text-align: left;
-    font-family:sans-serif;
+.unlock-your-dream-title {
+  color: aliceblue;
+  font-size: 72px;
+  font-weight: 600;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .unlock-your-dream-subtitle {
-    color: aliceblue;
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-    font-family:sans-serif;
-    margin-bottom: 20px;
+  color: aliceblue;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-bottom: 20px;
 }
 
-.primary-button{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    /* width: 150px; */
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: white;
-    border-radius: 34px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
+.primary-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  /* width: 150px; */
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  border-radius: 34px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.primary-button-arrow {
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  color: white;
 }
 
 .primary-button-text {
-    color: white;
-    font-size: 16px;
-    font-weight: 500;
-    text-align: left;
-    font-family:sans-serif;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
+  font-family: sans-serif;
 }
 
-.homepage-services{
-    background-color: white;
-    width: 100%;
-    padding-top: 5%;
+.homepage-services {
+  background-color: white;
+  width: 100%;
+  padding-top: 5%;
 }
 
-.homepage-services-top{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    margin: 0 auto;
+.homepage-services-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .homepage-services-title {
-    color: rgb(2, 49, 47);
-    font-size: 18px;
-    font-weight: 400;
-    text-align: left;
-    font-family: sans-serif;
+  color: rgb(2, 49, 47);
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .homepage-services-description {
-    color: rgb(2, 49, 47);
-    font-size: 48px;
-    font-weight: 500;
-    text-align: left;
-    font-family: sans-serif;
+  color: rgb(2, 49, 47);
+  font-size: 48px;
+  font-weight: 500;
+  text-align: left;
+  font-family: sans-serif;
 }
 
-.homepage-services-bottom{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    /* align-items: center; */
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 5%;
+.homepage-services-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* align-items: center; */
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 5%;
 }
 
-.homepage-services-card{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    /* align-items: center; */
-    width: 30%;
-    margin-top: 7%;
-    margin-bottom: 2%;
+.homepage-services-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  /* align-items: center; */
+  width: 30%;
+  margin-top: 7%;
+  margin-bottom: 2%;
 }
 
 .homepage-services-card-title {
-    color: rgb(2, 49, 47);
-    font-size: 20px;
-    font-weight: 500;
-    text-align: center;
-    font-family:sans-serif;
-    margin-bottom: 7px;
-    margin-top: 10px;
+  color: rgb(2, 49, 47);
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  font-family: sans-serif;
+  margin-bottom: 7px;
+  margin-top: 10px;
 }
 
 .homepage-services-card-subtitle {
-    color: #666;
-    font-size: 15px;
-    font-weight: 300;
-    text-align: center;
-    font-family:sans-serif;
+  color: #666;
+  font-size: 15px;
+  font-weight: 300;
+  text-align: center;
+  font-family: sans-serif;
 }
 
-.homepage-services-image{
-    max-height: 550px;
+.homepage-services-image {
+  max-height: 550px;
 }
 
+.working-process {
+  background-color: rgb(2, 49, 47);
+  width: 100%;
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.working-process-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.working-process-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  /* align-items: center; */
+  width: 30%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  cursor: pointer;
+}
+
+.working-process-card:hover {
+  background-color: rgb(0, 70, 67);
+}
+
+.working-process-card-title {
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: left;
+  font-family: sans-serif;
+  margin-bottom: 7px;
+  margin-bottom: 20px;
+}
+
+.working-process-card-subtitle {
+  color: white;
+  font-size: 15px;
+  font-weight: 300;
+  text-align: left;
+  font-family: sans-serif;
+}
+
+.working-process-card-number {
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: left;
+  font-family: sans-serif;
+  margin-top: 40px;
+  margin-bottom: 45px;
+}
+
+.working-process-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.working-process-title {
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-left: 20px;
+}
+
+.working-process-description {
+  color: white;
+  font-size: 48px;
+  font-weight: 500;
+  text-align: left;
+  font-family: sans-serif;
+  margin-left: 20px;
+}
+
+.working-process-head {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 30px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  left: 10%;
+  width: 35%;
+  position: absolute;
+  background-color: rgb(2, 49, 47);
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+.contact-form-title {
+  color: white;
+  font-size: 38px;
+  font-weight: 600;
+  text-align: left;
+  font-family: sans-serif;
+}
+
+.contact-form-description {
+  color: #aca8a8;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.contact-input-title {
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.contact-input {
+  width: 100%;
+  background-color: none;
+  border: none;
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  appearance: none;
+  outline: none;
+  padding: 16px;
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(222, 226, 230, 0.4);
+  box-shadow: inset 0 0 0 1px
+      var(--token-61d809e3-2961-4f61-89a3-e8e5de03c327, rgb(255, 255, 255)),
+    inset 0 0 0 1px rgba(248, 249, 250, 0.2);
+}
+
+.contact-input-submit {
+  width: 50%;
+  border-radius: 34px;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid white;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: white;
+  font-size: 17px;
+  font-weight: 500;
+  appearance: none;
+  outline: none;
+  padding: 16px;
+}
+
+.contact-divider {
+  width: 50%;
+  margin-left: 55%;
+  background-color: white;
+  flex: 2;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.contact-divider-title {
+  color: rgb(2, 49, 47);
+  font-size: 32px;
+  font-weight: 500;
+  text-align: left;
+  font-family: sans-serif;
+}
+
+.contact-divider-description {
+  color: #716f6f;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.contact-divider-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.contact-divider-details-left-title {
+  color: rgb(0, 70, 67);
+  font-size: 19px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.contact-divider-details-left-subtitle {
+  color: #716f6f;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+  font-family: sans-serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.contact-divider-details-left {
+  margin-right: 10%;
+}
+
+.contact-container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
